--- a/TapasTop/app/src/main/res/values/strings.xml
+++ b/TapasTop/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="password_hint">Password</string>
     <string name="confirm_password_hint">Confirm Password</string>
     <string name="forgot_password">Forgot password</string>
-
+    <string name="main_menu">Main Menu</string>
 </resources>
