--- a/TapasTop/app/src/main/res/values/strings.xml
+++ b/TapasTop/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="last_5_title">Last 5</string>
     <string name="view_all_title">View all</string>
     <string name="view_profile_title">View profile</string>
+    <string name="empty_field_error_msg">This field is mandatory</string>
+    <string name="passwords_unmatch_msg">Passwords are not the same</string>
+    <string name="invalid_mail_msg">Invalid email</string>
+    <string name="stats_title">Stats</string>
 </resources>
