--- a/TapasTop/app/src/main/res/values/strings.xml
+++ b/TapasTop/app/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string name="edit_title">Edit</string>
     <string name="name_textview">Name</string>
     <string name="username_textview">Username</string>
+    <string name="fullname_hint">Full Name</string>
+    <string name="gender_hint">Gender</string>
+    <string name="country_hint">Country</string>
+    <string name="location_hint">Location</string>
+    <string name="description_hint">Description</string>
 </resources>
