--- a/TapasTop/app/src/main/res/values/strings.xml
+++ b/TapasTop/app/src/main/res/values/strings.xml
@@ -27,4 +27,17 @@
     <string name="country_hint">Country</string>
     <string name="location_hint">Location</string>
     <string name="description_hint">Description</string>
+    <string name="gender_male">Male</string>
+    <string name="gender_female">Female</string>
+    <string name="title_post_signup">Complete your profile</string>
+    <string name="upload_text">Upload a profile picture</string>
+    <string name="name_title">Full Name:</string>
+    <string name="email_title">Email:</string>
+    <string name="gender_title">Gender:</string>
+    <string name="country_title">Country:</string>
+    <string name="location_title">Location:</string>
+    <string name="description_title">Description:</string>
+    <string name="degustation_title">Total number of degustations added:</string>
+    <string name="locals_title">Total number of locals added:</string>
+    <string name="requests_title">Number of pending requests:</string>
 </resources>
