Finish cicle 1 ISII

--- a/TapasTop/app/src/main/res/values-es/strings.xml
+++ b/TapasTop/app/src/main/res/values-es/strings.xml
@@ -7,7 +7,7 @@
     <string name="email_hint">Correo electrónico</string>
     <string name="password_hint">Contraseña</string>
     <string name="confirm_password_hint">Confirma la contraseña</string>
-    <string name="forgot_password">He olvidado mi contraseña</string>
+    <string name="forgot_password"><u>He olvidado mi contraseña</u></string>
     <string name="main_menu">Menú Principal</string>
     <string name="profile_title">Perfil</string>
     <string name="favorites_title">Favoritos</string>
@@ -33,7 +33,8 @@
     <string name="gender_female">F</string>
     <string name="title_post_signup">Completa tu perfil</string>
     <string name="upload_text">Sube una foto de perfil</string>
-    <string name="name_title">Nombre completo:</string>
+    <string name="name_title">Nombre:</string>
+    <string name="last_name_title">Apellidos:</string>
     <string name="email_title">Correo electrónico:</string>
     <string name="gender_title">Género:</string>
     <string name="country_title">País:</string>
@@ -41,11 +42,34 @@
     <string name="description_title">Descripción:</string>
     <string name="degustation_title">Cantidad total de degustaciones añadidas:</string>
     <string name="locals_title">Cantidad total de locales añadidos:</string>
-    <string name="requests_title">Cantidad de solicitudes pendientes:</string>
+    <string name="requests_title">Solicitudes de Amistad</string>
     <string name="age_title">Verificación\nde edad</string>
     <string name="age_warning">Debes ser mayor de 18 años\npara usar esta app</string>
     <string name="select_from_gallery_text">Selecciona una foto de tu galería</string>
     <string name="email_verification_title">Verificar Email</string>
-    <string name="resend_email"><u>Volver a enviar email </u></string>
+    <string name="resend_email"><u>Volver a enviar email</u></string>
     <string name="code">Código:</string>
+    <string name="gender_other">O</string>
+    <string name="edit_profile_title">Edita tu perfil</string>
+    <string name="username_exist_error_msg">Ya existe un usuario con ese nombre</string>
+    <string name="update_msg">Actualizado correctamente</string>
+    <string name="try_again_msg">Error en el servidor\n Por favor inténtelo de nuevo más tarde</string>
+    <string name="check_name_availability_msg">Comprobando la disponibilidad del nombre...</string>
+    <string name="forgot_password_title">He olvidado mi contraseña</string>
+    <string name="check_inbox_hint">Revisa tu bandeja de entrada y de spam</string>
+    <string name="search_hint">Buscar amigos...</string>
+    <string name="enter_username_hint">Introduce tu nombre de usuario</string>
+    <string name="enter_new_password_hint">Introduce tu nueva contraseña</string>
+    <string name="continue_title">Continuar</string>
+    <string name="new_password_title">Nueva contraseña</string>
+    <string name="change_title">Cambiar</string>
+    <string name="accept_title">Aceptar</string>
+    <string name="decline_title">Rechazar</string>
+    <string name="nothing_to_show_title">Nada para ver aquí :(</string>
+    <string name="send_friend_request_title">Enviar petición de amistad</string>
+    <string name="pending_friend_request">Enviada</string>
+    <string name="friends_list_title">Lista de Amigos</string>
+    <string name="help_title">Ayuda</string>
+    <string name="help_text">Toca en los botones de \"Ver...\" para entrar a las distintas secciones del menú o al icono de la lupa para abrir la barra de búsqueda</string>
+    <string name="ok_text">Ok</string>
 </resources>
