--- a/TapasTop/app/src/main/res/values/strings.xml
+++ b/TapasTop/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="email_hint">Email</string>
     <string name="password_hint">Password</string>
     <string name="confirm_password_hint">Confirm Password</string>
-    <string name="forgot_password">Forgot password</string>
+    <string name="forgot_password"><u>Forgot password</u></string>
     <string name="main_menu">Main Menu</string>
     <string name="profile_title">Profile</string>
     <string name="favorites_title">Favorites</string>
@@ -15,6 +15,7 @@
     <string name="last_5_title">Last 5</string>
     <string name="view_all_title">View all</string>
     <string name="view_profile_title">View profile</string>
+    <string name="username_exist_error_msg">This username already exists</string>
     <string name="empty_field_error_msg">This field is mandatory</string>
     <string name="passwords_unmatch_msg">Passwords are not the same</string>
     <string name="invalid_mail_msg">Invalid email</string>
@@ -30,9 +31,11 @@
     <string name="description_hint">Description</string>
     <string name="gender_male">M</string>
     <string name="gender_female">F</string>
+    <string name="gender_other">O</string>
     <string name="title_post_signup">Complete your profile</string>
     <string name="upload_text">Upload a profile picture</string>
-    <string name="name_title">Full Name:</string>
+    <string name="name_title">Name:</string>
+    <string name="last_name_title">Last Name:</string>
     <string name="email_title">Email:</string>
     <string name="gender_title">Gender:</string>
     <string name="country_title">Country:</string>
@@ -40,11 +43,32 @@
     <string name="description_title">Description:</string>
     <string name="degustation_title">Total number of degustations added:</string>
     <string name="locals_title">Total number of locals added:</string>
-    <string name="requests_title">Number of pending requests:</string>
+    <string name="requests_title">Friend Requests</string>
     <string name="age_title">Age\nVerification</string>
     <string name="age_warning">You must be 18 to use this app</string>
     <string name="select_from_gallery_text">Select from your gallery</string>
     <string name="email_verification_title">Email Verification</string>
     <string name="resend_email"><u>Resend email</u></string>
     <string name="code">Code:</string>
+    <string name="edit_profile_title">Edit your profile</string>
+    <string name="update_msg">Successfully updated</string>
+    <string name="try_again_msg">Error on the server\nPlease try again later</string>
+    <string name="check_name_availability_msg">Checking name availability...</string>
+    <string name="forgot_password_title">Forgot password</string>
+    <string name="check_inbox_hint">Check you inbox and spam folder</string>
+    <string name="search_hint">Search friends...</string>
+    <string name="enter_username_hint">Enter you username</string>
+    <string name="enter_new_password_hint">Enter your new password</string>
+    <string name="continue_title">Continue</string>
+    <string name="new_password_title">New password</string>
+    <string name="change_title">Change</string>
+    <string name="accept_title">Accept</string>
+    <string name="decline_title">Decline</string>
+    <string name="nothing_to_show_title">Nothing to show here :(</string>
+    <string name="send_friend_request_title">Send friend request</string>
+    <string name="pending_friend_request">Requested</string>
+    <string name="friends_list_title">Friends List</string>
+    <string name="help_title">Help</string>
+    <string name="ok_text">Ok</string>
+    <string name="help_text">Touch the \"View...\" buttons to enter the different sections of the menu or touch the search icon to open the search bar</string>
 </resources>
